Simplify payments: Use direct Stripe client-side checkout (no Lambda needed)

--- a/index.html
+++ b/index.html
@@ -4323,6 +4323,6 @@
     <script src="./src/config-amplify.js"></script>
     
     <!-- Memora Payment Integration -->
-    <script src="./src/payment.js"></script>
+    <script src="./src/payment-simple.js"></script>
   </body>
 </html>
