Implement Stripe Payment Links - replace all Buy Now buttons with direct payment links

--- a/index.html
+++ b/index.html
@@ -3143,28 +3143,31 @@
                         class="p-4 font-bold bg-neutral-50 rounded-bl-lg"
                       ></td>
                       <td class="p-4 text-center">
-                        <button
+                        <a
+                          href="https://buy.stripe.com/aFa5kFfFvfce2FzdZiafS0F"
+                          target="_blank"
                           class="package-buy-btn w-full md:w-auto bg-action text-white text-center font-semibold py-2.5 px-6 rounded-lg hover:bg-action-hover transition duration-300 shadow-md hover:shadow-lg btn-animate"
-                          data-package="Basic Memory Package"
                         >
                           <span data-translate="buy_now">Buy Now</span>
-                        </button>
+                        </a>
                       </td>
                       <td class="p-4 bg-accent-light/5 text-center">
-                        <button
+                        <a
+                          href="https://buy.stripe.com/aFa5kFfFvfce2FzdZiafS0F"
+                          target="_blank"
                           class="package-buy-btn w-full md:w-auto bg-accent text-white text-center font-semibold py-2.5 px-6 rounded-lg hover:bg-accent-hover transition duration-300 shadow-md hover:shadow-lg btn-animate"
-                          data-package="Premium Memory Package"
                         >
                           <span data-translate="buy_now">Buy Now</span>
-                        </button>
+                        </a>
                       </td>
                       <td class="p-4 text-center rounded-br-lg">
-                        <button
+                        <a
+                          href="https://buy.stripe.com/8x2eVf8d32pseoh6wQafS0E"
+                          target="_blank"
                           class="package-buy-btn w-full md:w-auto bg-action text-white text-center font-semibold py-2.5 px-6 rounded-lg hover:bg-action-hover transition duration-300 shadow-md hover:shadow-lg btn-animate"
-                          data-package="Deluxe Memory Package"
                         >
                           <span data-translate="buy_now">Buy Now</span>
-                        </button>
+                        </a>
                       </td>
                     </tr>
                   </tbody>
@@ -3258,13 +3261,13 @@
               </ul>
             </div>
             <div class="mt-auto pt-4">
-              <button
-                type="button"
+              <a
+                href="https://buy.stripe.com/aFa5kFfFvfce2FzdZiafS0F"
+                target="_blank"
                 class="block w-full bg-action text-white text-center font-semibold py-3.5 rounded-lg hover:bg-action-hover transition duration-300 shadow-md hover:shadow-lg btn-animate"
-                data-package="Basic Memory Package"
               >
                 <span data-translate="buy_now">Buy Now</span>
-              </button>
+              </a>
             </div>
           </div>
 
@@ -3374,13 +3377,13 @@
               </ul>
             </div>
             <div class="mt-auto pt-4">
-              <button
-                type="button"
+              <a
+                href="https://buy.stripe.com/aFa5kFfFvfce2FzdZiafS0F"
+                target="_blank"
                 class="block w-full bg-accent text-white text-center font-semibold py-3.5 rounded-lg hover:bg-accent-hover transition duration-300 shadow-md hover:shadow-lg btn-animate"
-                data-package="Premium Memory Package"
               >
                 <span data-translate="buy_now">Buy Now</span>
-              </button>
+              </a>
             </div>
           </div>
 
@@ -3473,13 +3476,13 @@
               </ul>
             </div>
             <div class="mt-auto pt-4">
-              <button
-                type="button"
+              <a
+                href="https://buy.stripe.com/8x2eVf8d32pseoh6wQafS0E"
+                target="_blank"
                 class="block w-full bg-action text-white text-center font-semibold py-3.5 rounded-lg hover:bg-action-hover transition duration-300 shadow-md hover:shadow-lg btn-animate"
-                data-package="Deluxe Memory Package"
               >
                 <span data-translate="buy_now">Buy Now</span>
-              </button>
+              </a>
             </div>
           </div>
         </div>
@@ -4322,7 +4325,6 @@
     <!-- Memora Configuration (loads environment-specific settings) -->
     <script src="./src/config-amplify.js"></script>
     
-    <!-- Memora Payment Integration -->
-    <script src="./src/payment-simple.js"></script>
+    <!-- Payment Links - No JavaScript needed -->
   </body>
 </html>
